# jero

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  bench.py  errors.py  exception_handlers.py  pyproject.toml  style-guide.md  zensical.toml
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
bugs/: README.md  server-side-decode-returns-422.md
demo_app/: __init__.py  app.py  auth.py  config.py  errors.py  factory.py  models.py
demo_app/operations/: __init__.py  streaming_operations.py  system_operations.py  widgets_operations.py
demo_app/services/: __init__.py  analytics_service.py  questions_service.py  widgets_service.py
docs/: comparison.md  getting-started.md  index.md  modules.md  note-on-ai-usage.md  performance.md  philosophy.md
docs/guide/: auth.md  background-tasks.md  binding.md  complete-example.md  forms.md  links-and-location.md  openapi.md  resources.md  responses.md  rest.md  streaming.md  testing-approach.md  testing.md  wiring.md
jero/: __init__.py  _openapi_wiring.py  _wiring_types.py  background.py  codecs.py  core.py  errors.py  forms.py  headers.py  links.py  multipart.py  openapi.py  streaming.py  structs.py  testing.py
plans/: background-tasks.md  cookies.md  form-typed-headers.md  forms.md  links-and-location.md  raw-headers-source.md  str-text-responses.md  streaming.md
scripts/: build_agent_docs.py
tests/: conftest.py  demo_app.py  test_auth.py  test_background.py  test_binding.py  test_demo_forms.py  test_demo_streaming.py  test_endpoint.py  test_errors.py  test_factory_harness.py  test_forms.py  test_headers.py  test_links.py  test_meta.py  test_openapi.py  test_resource.py  test_responses.py  test_routing.py  test_streaming.py  test_wiring.py
